monitoring/_kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-monitoring
  namespace: devops
  labels:
    app: prometheus-monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus-monitoring
  template:
    metadata:
      labels:
        app: prometheus-monitoring
    spec:
      securityContext:
        fsGroup: 1000
      containers:
      - name: prometheus-monitoring
        securityContext:
          privileged: true
        image: prom/prometheus:v2.12.0
        #imagePullPolicy: Always
        command:
          - "/bin/sh"
          - "-c"
          - >
            set -x;
            /bin/prometheus --config.file=/etc/prometheus/config.yaml
        ports:
        - containerPort: 9090
          name: prometheus
          protocol: TCP
#        - containerPort: 3000
#          name: grafana
#          protocol: TCP
        volumeMounts:
        - name: prometheus-config-volume
          mountPath: /etc/prometheus
      volumes:
        - name: prometheus-config-volume
          configMap:
            name: prometheus-config
#        volumeMounts:
#        - name: monitoring-efs-volume
#          mountPath: /mnt
#        - name: data-volume
#          mountPath: /prometheus/data
#      volumes:
#      - name: data-volume
#        persistentVolumeClaim:
#          claimName: prometheus-monitoring-ssd
#      - name: monitoring-efs-volume
#        persistentVolumeClaim:
#          claimName: monitoring-efs-pvc
