monitoring/_kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-monitoring
  namespace: devops
  labels:
    app: prometheus-monitoring
spec:
  ports:
  - name: prometheus-monitoring-port
    port: 9090
    protocol: TCP
  type: NodePort
  selector:
    app: prometheus-monitoring
