monitoring/_kube/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-monitoring
  namespace: devops
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: prometheus-monitoring.demo.com
    http:
      paths:
      - backend:
          serviceName: prometheus-monitoring
          servicePort: 9090
